--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-animated-pie",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Animated Pie chart for React Native，use ART and Animated",
   "main": "src/index.js",
   "scripts": {
@@ -13,8 +13,7 @@
   "dependencies": {
     "d3-shape": "^1.2.0",
     "react": "^16.2.0",
-    "react-native": "^0.51.0",
-    "react-native-pie": "^0.5.0"
+    "react-native": "^0.51.0"
   },
   "keywords": ["react", "native", "ART", "Animated", "Pie", "chart", "d3"],
   "author": "henryluki",
